# Financial-News-Intelligence-System

./: README.md  financial_news.db  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
src/: api.py  config.py  database.py  exception.py  llm.py  load_config.py  models.py  vector_store.py  workflow.py
src/agents/: base_agent.py  deduplication_agent.py  entity_extraction_agent.py  prompts.py  query_agent.py  stock_impact_agent.py  storage_agent.py
src/config/: config.yaml
