[project]
name = "financial-news-intelligence-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "chromadb>=1.3.5",
    "fastapi>=0.123.0",
    "httpx>=0.28.1",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "loguru==0.7.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.52.0",
    "uvicorn[standard]>=0.38.0",
]
